--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <script src="i18n.js"></script>
 </head>
 <body>
+  <!-- 顶部语言切换栏 -->
+  <div class="top-bar">
+    <div class="top-bar-content">
+      <div class="project-title">🦞 OpenClaw Swarm - Reinforcement Learning Research</div>
+      <div class="language-switcher">
+        <button class="lang-btn" data-lang="zh" onclick="switchLanguage('zh')">中文</button>
+        <button class="lang-btn" data-lang="en" onclick="switchLanguage('en')">English</button>
+      </div>
+    </div>
+  </div>
+
   <div class="main-container">
     <!-- 左侧对话框 -->
     <div class="chat-panel">
@@ -196,10 +207,6 @@
         <div class="preview-header">
           <h3>📊 生成成果预览</h3>
           <div class="preview-controls">
-            <div class="language-switcher">
-              <button class="lang-btn" data-lang="zh" onclick="switchLanguage('zh')">中文</button>
-              <button class="lang-btn" data-lang="en" onclick="switchLanguage('en')">English</button>
-            </div>
             <button class="control-btn active" onclick="showTab('roadmap')">🗺️ 路线图</button>
             <button class="control-btn" onclick="showTab('report')">📄 完整报告</button>
             <button class="control-btn" onclick="openInNewTab()">🔗 新标签打开</button>
